@@ -55,6 +55,7 @@ Bug fixes:
 - Fixed 'monster', 'mvp' and 'death' commands to work with new ai_skillUse.
 - Fixed storage access when storage is empty.
 - Various routing bug fixes (by jsteng).
+- Fix typo in code block for packet 010F: rename $ID to $skillID.
 - 'talk resp' now works correctly with NPCs that present a list of selections
   without saying anything else.
 - Emotions that aren't in the lookup table will be displayed by number.
@@ -66,6 +67,7 @@ Credits:
 - Fenris: Tk interface improvements.
 - aputs: Inventory checking config options.
 - fov: Storage access bugfix.
+- brianhj: 010F packet typo fix.
 
 Internal:
 - Added AI.pm, which is a wrapper for @ai_seq and @ai_seq_args.
